added query params to addition route

--- a/partials/home.html
+++ b/partials/home.html
@@ -4,7 +4,7 @@
 </p>
 <h3>Add:</h3>
 <p>
-  Addition <b>"add/4/10"</b> to the url
+  Addition <b>"add/?x=4&y=10"</b> to the url
 </p>
 <p>
   Division <b>'div/20/2'</b> to the url
